@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-06-10
+	Added: Native Image generation experiment.
 ### 2019-06-05
 	Changed: Exclusive mode was being a little eager.
 	Changed: Ignore list is checked earlier for matches.
